--- a/driveSpinner/driveSpinner.vcxproj.filters
+++ b/driveSpinner/driveSpinner.vcxproj.filters
@@ -1,51 +1,57 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Исходные файлы">
+    <Filter Include="Source code">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Файлы заголовков">
+    <Filter Include="Header files">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
       <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
     </Filter>
-    <Filter Include="Файлы ресурсов">
+    <Filter Include="Resource files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="driveSpinner.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Source code</Filter>
     </ClCompile>
     <ClCompile Include="timeStamp.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Source code</Filter>
     </ClCompile>
     <ClCompile Include="lastErrorText.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Source code</Filter>
     </ClCompile>
     <ClCompile Include="DriveSpin.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Source code</Filter>
     </ClCompile>
     <ClCompile Include="diagData.cpp">
-      <Filter>Исходные файлы</Filter>
+      <Filter>Source code</Filter>
+    </ClCompile>
+    <ClCompile Include="SysLoad.cpp">
+      <Filter>Source code</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="timeStamp.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="lastErrorText.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="DriveSpin.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="diagData.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Header files</Filter>
     </ClInclude>
     <ClInclude Include="pch.h">
-      <Filter>Файлы заголовков</Filter>
+      <Filter>Header files</Filter>
+    </ClInclude>
+    <ClInclude Include="SysLoad.h">
+      <Filter>Header files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
